# OE-Lib

./: .gitmodules  .travis.yml  Doxyfile  README.md  README.md.txt  README.txt  align_allocator.h  allocator.h  array.h  array_iterator.h  basic_range_util.h  basic_util.h  compiler_support.h  container_core.h  container_shared.h  contiguous_iterator.h  core_macros.h  core_util.h  debug.h  dynarray.h  error_handling.h  fixcap_array.h  fwd.h  inplace_dynarr.h  inplace_growarr.h  iterator_range.h  make_unique.h  new_string.h  oe_lib.natvis  oe_lib2.natvis  oe_lib2_3.natvis  oe_lib3.natvis  oe_lib4.natvis  oetl.natvis  pmr.h  pmr_dynarray.h  range_algo.h  range_view.h  ranges.h  stack.h  (+5 more)
.github/workflows/: cmake-multi-platform.yml
1.0/: basic_util.h  container_core.h  debug.h  dynarray.h  oetl.natvis  util.h
1.1/: basic_util.h  container_core.h  contiguous_iterator.h  util.h
1.1/unit_test/: dynarray_gtest.cpp
algo/: assign_append_insert.h  contiguous_iterator_to_ptr.h  copy.h  erase.h  type_traits.h
algo/detail/: cpy.h  eras.h  misc.h  throw.h
auxi/: adl_begin_end.h  algo_detail.h  alloc_with_header.h  allocate_with_header.h  allocator_detail.h  array_interface.h  array_iterator.h  assignable.h  compress_empty.h  container_util.h  contiguous_container_iterator.h  contiguous_iterator.h  contiguous_iterator_to_ptr.h  core_util.h  counted_iterator.h  detail.h  detail_assignable.h  detail_const_param.h  detail_forward.h  detail_in_param.h  detail_iter_with_func.h  dynarray_detail.h  dynarray_iterator.h  fixcap_array_detail.h  forward_t.h  impl_algo.h  inplace_dynarr_detail.h  inplace_growarr_detail.h  iter_as_contiguous_address.h  iterator_facade.h  macros.h  monostate_function.h  range_algo_detail.h  range_traits.h  struct_of_growarr_detail.h  transform_detail.h  transform_iterator.h  transform_view.h  type_traits.h  view_detail.inc  (+3 more)
branches/new_string/: container_shared.h  debug.h  iterator_range.h  new_string.h  oetl.natvis  util.h
compat/: boost_pmr.h  default.h  eigen_dense.h  std_array.h  std_classes.h  std_classes_extra.h  std_container.h
debug_print/: gdb_oel.py  oe_lib2.natvis
expm/: basic_util.h  container_shared.h  contiguous_iterator.h  core_util.h  dynarray.h  fixcap_array.h  iterator_range.h  new_string.h  string_num_convert.h  util.h
expm/unit_test/: dynarray_gtest.cpp
optimize_ext/: boost_variant2.h  default.h  eigen_dense.h  std_optional.h  std_tuple.h  std_variant.h
pmr/: boost.h  std.h
stable/: array_iterator.h  basic_range_util.h  basic_util.h  container_core.h  debug.h  dynarray.h  iterator_range.h  util.h
trivial_relocate/: default.h  eigen_dense.h  std_variant.h
trunk/: basic_range_util.h  basic_util.h  compiler_support.h  container_core.h  container_shared.h  dynarray.h  fixcap_array.h  iterator_range.h  oetl.natvis  util.h  vec3.h
trunk/stable/: basic_range_util.h  basic_util.h  dynarray.h  util.h
trunk/trunk/: basic_range_util.h  container_shared.h  dynarray.h  fixcap_array.h  iterator_range.h  util.h
trunk/unit_test/: dynarray_gtest.cpp  fixcaparray_gtest.cpp
unit_test/: CMakeLists.txt  algo_gtest.cpp  dynarray_construct_assignop_swap_gtest.cpp  dynarray_gtest.cpp  dynarray_mutate_gtest.cpp  dynarray_other_gtest.cpp  fixcaparray_gtest.cpp  forward_decl_test.cpp  forward_decl_test.h  generic_array_test.h  gtest_mem_main.cpp  incl_algo_copy.cpp  incl_algo_erase.cpp  incl_allocator.cpp  incl_array.cpp  incl_assign_append_insert.cpp  incl_dynarray.cpp  incl_fixcap_array.cpp  incl_inplace_dynarr.cpp  incl_inplace_growarr.cpp  incl_make_unique.cpp  incl_pmr.cpp  incl_range_algo.cpp  incl_range_view.cpp  incl_transform_iterator.cpp  incl_util.cpp  incl_view_adjacent_transform.cpp  incl_view_all.cpp  incl_view_counted.cpp  incl_view_generate.cpp  incl_view_move.cpp  incl_view_owning.cpp  incl_view_repeat.cpp  incl_view_subrange.cpp  incl_view_transform.cpp  incl_view_unbounded.cpp  incl_view_value_init.cpp  incl_view_zip.cpp  incl_view_zip_transform.cpp  inplace_dynarr_gtest.cpp  (+7 more)
view/: adjacent_transform.h  all.h  contiguous_iterator_to_ptr.h  counted.h  drop.h  dynarray_iterator.h  elements.h  enumerate.h  first.h  generate.h  iota.h  last.h  move.h  owning.h  repeat.h  reverse.h  single.h  subrange.h  transform.h  transform_iterator.h  unbounded.h  value_init.h  zip.h  zip_transform.h
view/detail/: all.h  alloc_with_header.h  core.h  dynarray_iterator.h  may_sized.h  misc.h  owning.h  std_range.h
(+1 files in other folders)
